--- a/requirements.txt
+++ b/requirements.txt
@@ -7,3 +7,6 @@ static==0.4
 wsgiref==0.1.2
 django-cors-headers==1.1.0
 whitenoise==1.0.5
+pycrypto>=2.6.1
+djangorestframework>=3.1.0
+pytz==2015.4
