--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ wsgiref==0.1.2
 django-cors-headers==1.1.0
 whitenoise==1.0.5
 requests==2.7.0
+django-alexa==0.0.7
 pycrypto>=2.6.1
 djangorestframework>=3.1.0
 pytz==2015.4
