--- a/app.json
+++ b/app.json
@@ -1,8 +1,7 @@
 {
   "env": {
     "IS_HEROKU_SERVER": "1",
-    "ALEXA_APP_ID_DEFAULT": "Your Amazon Alexa App ID DEFAULT",
-    "ALEXA_APP_ID_OTHER": "Your Amazon Alexa App ID OTHER",
+    "ALEXA_APP_ID_topopps": "Your Amazon Alexa App ID DEFAULT",
     "ALEXA_REQUEST_VERIFICATON": "False"
   },
   "addons": [
